[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-audit-bench-submission"
version = "1.0.0"
description = "OpenEnv hackathon submission for ML experiment integrity auditing"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"